# NN

./: .gitignore  CMakeLists.txt  cnn.cpp  cnn.h  load_files.cpp  load_files.h  load_model.cpp  load_model.h  main.cpp  paramparams.model  segment_data.cpp  segment_data.h  test.cpp  transform_data.cpp  transform_data.h  wav.cpp  wav.h
param/: params.model  test_model.py
python_implementation/: attempt_2.py  denoising_autoencoder_final.pt  load_torch.py  train_model.py  wiener_filter.py
